# python-flask-jwt

./: README.MD  app.py  contact.py  db.py  pyproject.toml  views.py
templates/: index.html
